# server/api/v1/attack_awareness/att_scan_log.go
@@ -2,19 +2,18 @@ package attack_awareness
 
 import (
 	"github.com/flipped-aurora/gin-vue-admin/server/global"
-    "github.com/flipped-aurora/gin-vue-admin/server/model/attack_awareness"
-    attack_awarenessReq "github.com/flipped-aurora/gin-vue-admin/server/model/attack_awareness/request"
-    "github.com/flipped-aurora/gin-vue-admin/server/model/common/response"
-    "github.com/flipped-aurora/gin-vue-admin/server/service"
-    "github.com/gin-gonic/gin"
-    "go.uber.org/zap"
+	"github.com/flipped-aurora/gin-vue-admin/server/model/attack_awareness"
+	attack_awarenessReq "github.com/flipped-aurora/gin-vue-admin/server/model/attack_awareness/request"
+	"github.com/flipped-aurora/gin-vue-admin/server/model/common/response"
+	"github.com/flipped-aurora/gin-vue-admin/server/service"
+	"github.com/gin-gonic/gin"
+	"go.uber.org/zap"
 )
 
 type ScanlogApi struct {
 }
 
 var scanlogService = service.ServiceGroupApp.Attack_awarenessServiceGroup.ScanlogService
-
 
 // CreateScanlog 创建扫描感知
 // @Tags Scanlog
@@ -34,7 +33,7 @@ func (scanlogApi *ScanlogApi) CreateScanlog(c *gin.Context) {
 	}
 
 	if err := scanlogService.CreateScanlog(&scanlog); err != nil {
-        global.GVA_LOG.Error("创建失败!", zap.Error(err))
+		global.GVA_LOG.Error("创建失败!", zap.Error(err))
 		response.FailWithMessage("创建失败", c)
 	} else {
 		response.OkWithMessage("创建成功", c)
@@ -53,7 +52,7 @@ func (scanlogApi *ScanlogApi) CreateScanlog(c *gin.Context) {
 func (scanlogApi *ScanlogApi) DeleteScanlog(c *gin.Context) {
 	ID := c.Query("ID")
 	if err := scanlogService.DeleteScanlog(ID); err != nil {
-        global.GVA_LOG.Error("删除失败!", zap.Error(err))
+		global.GVA_LOG.Error("删除失败!", zap.Error(err))
 		response.FailWithMessage("删除失败", c)
 	} else {
 		response.OkWithMessage("删除成功", c)
@@ -71,7 +70,7 @@ func (scanlogApi *ScanlogApi) DeleteScanlog(c *gin.Context) {
 func (scanlogApi *ScanlogApi) DeleteScanlogByIds(c *gin.Context) {
 	IDs := c.QueryArray("IDs[]")
 	if err := scanlogService.DeleteScanlogByIds(IDs); err != nil {
-        global.GVA_LOG.Error("批量删除失败!", zap.Error(err))
+		global.GVA_LOG.Error("批量删除失败!", zap.Error(err))
 		response.FailWithMessage("批量删除失败", c)
 	} else {
 		response.OkWithMessage("批量删除成功", c)
@@ -96,7 +95,7 @@ func (scanlogApi *ScanlogApi) UpdateScanlog(c *gin.Context) {
 	}
 
 	if err := scanlogService.UpdateScanlog(scanlog); err != nil {
-        global.GVA_LOG.Error("更新失败!", zap.Error(err))
+		global.GVA_LOG.Error("更新失败!", zap.Error(err))
 		response.FailWithMessage("更新失败", c)
 	} else {
 		response.OkWithMessage("更新成功", c)
@@ -115,7 +114,7 @@ func (scanlogApi *ScanlogApi) UpdateScanlog(c *gin.Context) {
 func (scanlogApi *ScanlogApi) FindScanlog(c *gin.Context) {
 	ID := c.Query("ID")
 	if rescanlog, err := scanlogService.GetScanlog(ID); err != nil {
-        global.GVA_LOG.Error("查询失败!", zap.Error(err))
+		global.GVA_LOG.Error("查询失败!", zap.Error(err))
 		response.FailWithMessage("查询失败", c)
 	} else {
 		response.OkWithData(gin.H{"rescanlog": rescanlog}, c)
@@ -139,16 +138,16 @@ func (scanlogApi *ScanlogApi) GetScanlogList(c *gin.Context) {
 		return
 	}
 	if list, total, err := scanlogService.GetScanlogInfoList(pageInfo); err != nil {
-	    global.GVA_LOG.Error("获取失败!", zap.Error(err))
-        response.FailWithMessage("获取失败", c)
-    } else {
-        response.OkWithDetailed(response.PageResult{
-            List:     list,
-            Total:    total,
-            Page:     pageInfo.Page,
-            PageSize: pageInfo.PageSize,
-        }, "获取成功", c)
-    }
+		global.GVA_LOG.Error("获取失败!", zap.Error(err))
+		response.FailWithMessage("获取失败", c)
+	} else {
+		response.OkWithDetailed(response.PageResult{
+			List:     list,
+			Total:    total,
+			Page:     pageInfo.Page,
+			PageSize: pageInfo.PageSize,
+		}, "获取成功", c)
+	}
 }
 
 // GetScanlogPublic 不需要鉴权的扫描感知接口
@@ -160,9 +159,28 @@ func (scanlogApi *ScanlogApi) GetScanlogList(c *gin.Context) {
 // @Success 200 {string} string "{"success":true,"data":{},"msg":"获取成功"}"
 // @Router /scanlog/getScanlogPublic [get]
 func (scanlogApi *ScanlogApi) GetScanlogPublic(c *gin.Context) {
-    // 此接口不需要鉴权
-    // 示例为返回了一个固定的消息接口，一般本接口用于C端服务，需要自己实现业务逻辑
-    response.OkWithDetailed(gin.H{
-       "info": "不需要鉴权的扫描感知接口信息",
-    }, "获取成功", c)
+	// 此接口不需要鉴权
+	// 示例为返回了一个固定的消息接口，一般本接口用于C端服务，需要自己实现业务逻辑
+	response.OkWithDetailed(gin.H{
+		"info": "不需要鉴权的扫描感知接口信息",
+	}, "获取成功", c)
+}
+
+// GetScanlogTop10 用id查询扫描感知Top10统计信息
+// @Tags Scanlog
+// @Summary 用id查询扫描感知Top10统计信息
+// @Security ApiKeyAuth
+// @accept application/json
+// @Produce application/json
+// @Param data query attack_awareness.Scanlog true "用id查询扫描感知Top10统计信息"
+// @Success 200 {string} string "{"success":true,"data":{},"msg":"查询成功"}"
+// @Router /scanlog/getScanlogTop10 [get]
+func (scanlogApi *ScanlogApi) GetScanlogTop10(c *gin.Context) {
+	results, err := scanlogService.GetScanlogTop10()
+	if err != nil {
+		global.GVA_LOG.Error("查询失败!", zap.Error(err))
+		response.FailWithMessage("查询失败", c)
+	} else {
+		response.OkWithData(gin.H{"results": results}, c)
+	}
 }
